--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -16,13 +16,13 @@ services:
     volumes:
       - static_volume:/backend_static
   frontend:
-    image: vygled/taski_frontend  # Качаем с Docker Hub
+    image: vygled/taski_frontend
     env_file: .env
     command: cp -r /app/build/. /frontend_static/
     volumes:
       - static_volume:/frontend_static
   gateway:
-    image: vygled/taski_gateway  # Качаем с Docker Hub
+    image: vygled/taski_gateway
     env_file: .env
     volumes:
       - static_volume:/staticfiles/
