--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -137,8 +137,9 @@ jobs:
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USER }}
-        key: ${{ secrets.SSH_KEY }}
-        passphrase: ${{ secrets.SSH_PASSPHRASE }}
+        pass: ${{ secrets.DEPLOY_PASS }}
+#        key: ${{ secrets.SSH_KEY }}
+#        passphrase: ${{ secrets.SSH_PASSPHRASE }}
         source: "docker-compose.production.yml"
         target: "taski"
     - name: Executing remote ssh commands to deploy
